--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "example-app",
-  "version": "0.0.0",
+  "name": "team-sorting",
+  "version": "0.1.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -17,11 +17,9 @@
     "@angular/core": "~15.0.0",
     "@angular/forms": "~15.0.0",
     "@angular/material": "15.2.8",
-    "@angular/material-moment-adapter": "15.2.8",
     "@angular/platform-browser": "~15.0.0",
     "@angular/platform-browser-dynamic": "~15.0.0",
     "@angular/router": "~15.0.0",
-    "moment": "^2.18.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.5"
